Scrollbar visible on darkmode issue #204

--- a/src/pages/Pool/styles.styl
+++ b/src/pages/Pool/styles.styl
@@ -107,3 +107,13 @@ input {
     background: rgb(222, 222, 222) !important;
   }  
 }
+
+.thumb{
+  border-radius: 20px;
+  &.dark{
+    background: #555;
+  }  
+  &.light {
+    background: #ccc;
+  }  
+}
