--- a/src/pages/TokenModal/TokenSelector/styles.styl
+++ b/src/pages/TokenModal/TokenSelector/styles.styl
@@ -145,3 +145,13 @@
     background: rgba(255, 255, 255, 0.1);
   }
 }
+
+.thumb{
+  border-radius: 20px;
+  &.dark{
+    background: #555;
+  }  
+  &.light {
+    background: #ccc;
+  }  
+}
